Alteramos as tabelas com o objetivo de adicionar colunas
Adicionamos a coluna de id que será a chave primária da nossa tabela.

Observação: Fizx um pouco diferente da aula utilizando os try e except e o input de entrada para usuários

--- a/BancoDeDados.ipynb
+++ b/BancoDeDados.ipynb
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "1eeb7dbf",
    "metadata": {},
    "outputs": [
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "ab935644",
    "metadata": {},
    "outputs": [
@@ -133,6 +133,7 @@
     "# com o objetivo de encontrar e tratar possiveis erros \n",
     "try:\n",
     "    \n",
+    "     \n",
     "    # Comando que irá especificar o banco que queremos utilizar\n",
     "    cursor.execute(\"USE twdbd\")\n",
     "    \n",
@@ -141,7 +142,7 @@
     "\n",
     "# Except que irá executar o bloco abaixo caso o try encontre algum\n",
     "# erro relacionado a execeção especificada.\n",
-    "except pymysql.ProgrammingError as erro:\n",
+    "except pymysql.OperationalError as erro:\n",
     "    \n",
     "    # O provável erro desse trecho é a utilização de um banco de dados\n",
     "    # que não existe no sistema, por isso, usaremos a exceção Programming\n",
@@ -161,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "1e2f1ac0",
    "metadata": {},
    "outputs": [
@@ -169,7 +170,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Tabela criada com sucesso\n"
+      "A tabela ja existe ou a conexão/criação com o banco de dados falhou:  (1050, \"Table 'comalexandria' already exists\")\n"
      ]
     }
    ],
@@ -188,7 +189,7 @@
     "# especificadas pelo except. Nesse caso, os erros mais provaveis são as\n",
     "# falhas na conexão (OperationalError) ou a criação de uma tabela que já\n",
     "# existe (ProgrammingError)\n",
-    "except pymysql.ProgrammingError or pymysql.OperationalError:\n",
+    "except (pymysql.ProgrammingError, pymysql.OperationalError) as erro:\n",
     "    \n",
     "    # Impressão da mensagem de erro\n",
     "    print(\"A tabela ja existe ou a conexão/criação com o banco de dados falhou: \", erro)"
@@ -196,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "6a42ca68",
    "metadata": {},
    "outputs": [
@@ -204,7 +205,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Tabela criada com sucesso\n"
+      "A tabela ja existe ou a conexão/criação com o banco de dados falhou:  (1050, \"Table 'comhilltop' already exists\")\n"
      ]
     }
    ],
@@ -224,7 +225,7 @@
     "# especificadas pelo except. Nesse caso, os erros mais provaveis são as\n",
     "# falhas na conexão (OperationalError) ou a criação de uma tabela que já\n",
     "# existe (ProgrammingError)\n",
-    "except pymysql.ProgrammingError or pymysql.OperationalError as erro:\n",
+    "except (pymysql.ProgrammingError,pymysql.OperationalError) as erro:\n",
     "    \n",
     "    # Impressão da mensagem de erro\n",
     "    print(\"A tabela ja existe ou a conexão/criação com o banco de dados falhou: \", erro)"
@@ -259,7 +260,7 @@
     "# especificadas pelo except. Nesse caso, os erros mais provaveis são as\n",
     "# falhas na conexão (OperationalError) ou a criação de uma tabela que já\n",
     "# existe (ProgrammingError).\n",
-    "except pymysql.ProgrammingError or pymysql.OperationalError as erro:\n",
+    "except (pymysql.ProgrammingError,pymysql.OperationalError) as erro:\n",
     "    \n",
     "    # Impressão da mensagem de erro\n",
     "    print(\"A tabela ja existe ou a conexão/criação com o banco de dados falhou: \", erro)\n",
@@ -277,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "id": "68fe2f55",
    "metadata": {},
    "outputs": [
@@ -313,6 +314,179 @@
     "    \n",
     "    # Impressão da mensagem de erro.\n",
     "    print(\"Não foi possivel mostrar a tabela, verifique a conexão com o banco de dados: \", erro)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e34395be",
+   "metadata": {},
+   "source": [
+    "Alterando as tabelas: Vamos adicionar nas tabelas criadas um id que será\n",
+    "utilizada como chave primária da tabela que tem como objetivo identificar\n",
+    "os registros criados na tabela"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8edf7518",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tabela alterada com sucesso\n"
+     ]
+    }
+   ],
+   "source": [
+    "# O try irá inspecionar o bloco de execução da alteração de tabela com \n",
+    "# o objetivo de identificar possiveis erros durante a execução do trecho\n",
+    "try:\n",
+    "    \n",
+    "    # Comando alter que irá adicionar na tabela a coluna id como chave\n",
+    "    # primária\n",
+    "    cursor.execute(\"ALTER TABLE comalexandria ADD COLUMN id INT AUTO_INCREMENT PRIMARY KEY\")\n",
+    "    \n",
+    "    # Mensagem que será executada após a execução bem sucedida do bloco.  \n",
+    "    print(\"Tabela alterada com sucesso\")\n",
+    "\n",
+    "# O except que irá tratar os erros encontrados pelo try usando as execeções\n",
+    "# especificadas. Nesse caso, os erros mais provaveis são as alterações\n",
+    "# em tabelas que não existem(ProgrammingError) e a criação de uma coluna\n",
+    "# que ja existe(OperationalError)\n",
+    "except (pymysql.ProgrammingError, pymysql.OperationalError) as erro:\n",
+    "    \n",
+    "    # Mensagem que será exibida caso a execução do trecho falhe\n",
+    "    print(\"Falha na alteração da tabela: \", erro)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7ecdd419",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Falha na alteração da tabela:  (1060, \"Duplicate column name 'id'\")\n"
+     ]
+    }
+   ],
+   "source": [
+    "# O try irá inspecionar o bloco de execução da alteração de tabela com \n",
+    "# o objetivo de identificar possiveis erros durante a execução do trecho\n",
+    "try:\n",
+    "    \n",
+    "    # Comando alter que irá adicionar na tabela a coluna id como chave\n",
+    "    # primária\n",
+    "    cursor.execute(\"ALTER TABLE comhilltop ADD COLUMN id INT AUTO_INCREMENT PRIMARY KEY\")\n",
+    "        \n",
+    "    # Mensagem que será executada após a execução bem sucedida do bloco.\n",
+    "    print(\"Tabela alterada com sucesso\")\n",
+    "\n",
+    "# O except que irá tratar os erros encontrados pelo try usando as execeções\n",
+    "# especificadas. Nesse caso, os erros mais provaveis são as alterações\n",
+    "# em tabelas que não existem(ProgrammingError) e a criação de uma coluna\n",
+    "# que ja existe(OperationalError)\n",
+    "except (pymysql.ProgrammingError, pymysql.OperationalError) as erro:\n",
+    "    \n",
+    "    # Mensagem que será exibida caso a execução do trecho falhe\n",
+    "    print(\"Falha na alteração da tabela: \", erro)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dae4d8b5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tabela alterada com sucesso\n"
+     ]
+    }
+   ],
+   "source": [
+    "# O try irá inspecionar o bloco de execução da alteração de tabela com \n",
+    "# o objetivo de identificar possiveis erros durante a execução do trecho\n",
+    "try:\n",
+    "    \n",
+    "    # Comando alter que irá adicionar na tabela a coluna id como chave\n",
+    "    # primária\n",
+    "    cursor.execute(\"ALTER TABLE comsalvadores ADD COLUMN id INT AUTO_INCREMENT PRIMARY KEY\")\n",
+    "    \n",
+    "    # Mensagem que será executada após a execução bem sucedida do bloco.\n",
+    "    print(\"Tabela alterada com sucesso\")\n",
+    "\n",
+    "# O except que irá tratar os erros encontrados pelo try usando as execeções\n",
+    "# especificadas. Nesse caso, os erros mais provaveis são as alterações\n",
+    "# em tabelas que não existem(ProgrammingError) e a criação de uma coluna\n",
+    "# que ja existe(OperationalError)\n",
+    "except (pymysql.ProgrammingError, pymysql.OperationalError) as erro:\n",
+    "\n",
+    "    # Mensagem que será exibida caso a execução do trecho falhe\n",
+    "    print(\"Falha na alteração da tabela\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7ea39174",
+   "metadata": {},
+   "source": [
+    "Verificando se a coluna foi criada corretamente"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "43db4390",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tabelas presentes no banco de dados:\n",
+      "('nome', 'varchar(255)', 'YES', '', None, '')\n",
+      "('arma', 'varchar(255)', 'YES', '', None, '')\n",
+      "('id', 'int(11)', 'NO', 'PRI', None, 'auto_increment')\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Irá inspecionar o bloco que executa o comando que mostra as colunas\n",
+    "# das tabelas existentes no banco de dados com o objetivo de identificar\n",
+    "# erros.\n",
+    "try:\n",
+    "    \n",
+    "    # Ira solicitar ao usuário, o nome da tabela que será mostrada.\n",
+    "    nome_tabela = str(input('Informe o nome da tabela que você quer visualizar'))\n",
+    "\n",
+    "    # Ira executar o comando describe utilizando o valor da variável nome_tabela.\n",
+    "    cursor.execute(f\"DESCRIBE {nome_tabela}\")\n",
+    "    \n",
+    "    # Mensagem que será impressa após a execução bem sucedida do comando.\n",
+    "    print(\"Tabelas presentes no banco de dados:\")\n",
+    "    \n",
+    "    # For que irá percorrer o cursor com o comando describe e \n",
+    "    # imprimir o nome das colunas.\n",
+    "    for nome in cursor:\n",
+    "        \n",
+    "        print(nome)\n",
+    "\n",
+    "# Except que irá tratar os erros encontrados pelo try utilizando a exceção especificada.\n",
+    "# Nesse caso, o erro mais provavel de ocorrer é a não existência da tabela solicitada pelo\n",
+    "# usuário(ProgramationError).\n",
+    "except pymysql.ProgrammingError as erro:\n",
+    "    \n",
+    "    print(\"Falha na descrição da tabela. Verifique se a tabela existe no banco de dados: \", erro)"
    ]
   }
  ],
