Aula de inserção de dados com python e mysqç
Coisas que fiz diferente da aula:

-> Utilizei blocos try e catch para validar as entradas de usuário.

-> Utilizei inputs para especificar a tabela que está sendo utilizada na inserção

-> Utilizei inputs para coletar os dados que serão inseridos

-> Utilizei o isnumeric para evitar que o usuário utilize números na inserção de dados

--- a/BancoDeDados.ipynb
+++ b/BancoDeDados.ipynb
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "ab935644",
    "metadata": {},
    "outputs": [
@@ -445,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 3,
    "id": "43db4390",
    "metadata": {},
    "outputs": [
@@ -487,6 +487,88 @@
     "except pymysql.ProgrammingError as erro:\n",
     "    \n",
     "    print(\"Falha na descrição da tabela. Verifique se a tabela existe no banco de dados: \", erro)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dae0bd17",
+   "metadata": {},
+   "source": [
+    "Inserindo Dados nas Tabelas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "570a0dce",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Inserção de dados realizada na tabela  comalexandria\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Irá inspecionar o bloco de inserção de dados com o objetivo de \n",
+    "# identificar erros durante a execução do bloco de código.\n",
+    "try:\n",
+    "    \n",
+    "    # Ira conter o nome da tabela informada pelo usuário  \n",
+    "    nome_tabela = input(str(\"Escreva o nome da tabela que terá os dados inseridos\"))\n",
+    "    \n",
+    "    # Ira conter o nome do integrante do grupo\n",
+    "    nome = input(str(\"Nome do integrante do grupo\"))\n",
+    "            \n",
+    "    # Ira conter o nome da arma do integrante grupo.\n",
+    "    arma = input(str(\"Arma do integrante: \"))\n",
+    "    \n",
+    "    # Nessa etapa vamos verificar se o usuário vai utilizar numeros\n",
+    "    # nos nomes solicitados.\n",
+    "    # isnumeric: Função que tem como objetivo verificar se há valores numéricos\n",
+    "    # presentes em um determinado dado.\n",
+    "    # Basicamente iremos verificar o retorno da função (valor booleano) para\n",
+    "    # definir se o usuário deve ou não conseguir inserir dados no sistema.\n",
+    "    if nome.isnumeric() == True or arma.isnumeric() == True:\n",
+    "        \n",
+    "        # Se o retorno da função for True: Significa que há dados numéricos\n",
+    "        # nos dados inseridos, nesse caso não enviaremos dados para o servidor\n",
+    "        # e mostraremos essa mensagem.\n",
+    "        print(\"Por favor, não utilize numeros no nome do integrante ou da arma\")\n",
+    "    \n",
+    "    else:\n",
+    "        \n",
+    "        # Caso não haja valores numéricos, vamos iniciar a inserção dos dados\n",
+    "        # normalmente \n",
+    "        \n",
+    "        # No python, há uma maneira segura de inserir dados com o objetivo\n",
+    "        # de evitar o injection sql. \n",
+    "        \n",
+    "        # Variável que irá conter o comando sql. os \"%s\" irão representar\n",
+    "        # os valores que o usuário irá inserir nas variáveis nome e arma.   \n",
+    "        sql_query = f\"INSERT INTO {nome_tabela}(nome, arma) VALUES(%s,%s)\"\n",
+    "        \n",
+    "        # Ira executar o comando utilizando os valores inseridos pelo\n",
+    "        # usuário\n",
+    "        cursor.execute(sql_query, (nome, arma))\n",
+    "    \n",
+    "        # Ira gravar a inserção dos dados no nosso servidor \n",
+    "        conexao.commit()\n",
+    "        \n",
+    "        # Mensagem que será mostrada após a execução bem sucedida da\n",
+    "        # inserção.\n",
+    "        print(\"Inserção de dados realizada na tabela \", nome_tabela)\n",
+    "\n",
+    "# Ira tratar os erros encontrados pelo try utilizando as execeções\n",
+    "# especificadas. Nesse caso o possivel erro que pode ocorrer durante\n",
+    "# a execução do bloco é a não existência da tabela (ProgrammingError) que o usuário\n",
+    "# solicitou nos inputs de de entrada.\n",
+    "except (pymysql.ProgrammingError) as erro:\n",
+    "    \n",
+    "    # Mensagem que irá conter o erro da execução.\n",
+    "    print(\"A tabela solicitada não existe no sistema, tente novamente: \", erro)"
    ]
   }
  ],
