códigos da aula de select usando python e mysqç
Coisas que fiz diferente da aula:

-> Utilizei o try e except para capturar possiveis erros

-> Utilizei o isnumeric para validar dados do tipo texto com o objetivo de
evitar a entrada de dados numéricos nas colunas varchar das tabelas

-> Utilizei inputs para coletar valores passados pelo usuário

-> Utilizei estruturas condicionais para validar as escolhas dos usuários

->

--- a/BancoDeDados.ipynb
+++ b/BancoDeDados.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "8e6382e1",
    "metadata": {},
    "outputs": [],
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "ab935644",
    "metadata": {},
    "outputs": [
@@ -445,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 24,
    "id": "43db4390",
    "metadata": {},
    "outputs": [
@@ -486,7 +486,11 @@
     "# usuário(ProgramationError).\n",
     "except pymysql.ProgrammingError as erro:\n",
     "    \n",
-    "    print(\"Falha na descrição da tabela. Verifique se a tabela existe no banco de dados: \", erro)"
+    "    print(\"Falha na descrição da tabela. Verifique se a tabela existe no banco de dados: \", erro)\n",
+    "\n",
+    "except pymysql.OperationalError as erro:\n",
+    "    \n",
+    "    print(\"Falha na comunicação com o servidor: \", erro)"
    ]
   },
   {
@@ -499,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "570a0dce",
    "metadata": {},
    "outputs": [
@@ -565,10 +569,314 @@
     "# especificadas. Nesse caso o possivel erro que pode ocorrer durante\n",
     "# a execução do bloco é a não existência da tabela (ProgrammingError) que o usuário\n",
     "# solicitou nos inputs de de entrada.\n",
-    "except (pymysql.ProgrammingError) as erro:\n",
+    "except pymysql.ProgrammingError as erro:\n",
     "    \n",
     "    # Mensagem que irá conter o erro da execução.\n",
-    "    print(\"A tabela solicitada não existe no sistema, tente novamente: \", erro)"
+    "    print(\"A tabela solicitada não existe no sistema, tente novamente: \", erro)\n",
+    "\n",
+    "except pymysql.OperationalError as erro:\n",
+    "    \n",
+    "    print(\"Falha na comunicação com o servidor: \", erro)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6f374ddc",
+   "metadata": {},
+   "source": [
+    "Selecionando Todos os Dados das Tabelas "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "b6de8ec4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Nomes encontrados na base de dados\n",
+      "('Rick',)\n",
+      "('Gleen',)\n",
+      "('Daryl',)\n",
+      "('Carol',)\n",
+      "('Marcos',)\n",
+      "('ana',)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Ira inspecionar o bloco que executará selects no banco de dados\n",
+    "try:\n",
+    "    \n",
+    "    # Irá conter o nome da tabela informada pelo usuário\n",
+    "    nome_tabela = input(str(\"Nome da tabela que será selecionada\"))\n",
+    "    \n",
+    "    # Ira possibilitar que o usuário realize filtros no select do banco de dados.\n",
+    "    entrada = input(str(\"Escolha o filtro para filtrar os dados: [nome, arma, id, mostrar todos os dados]\")).upper()\n",
+    "    \n",
+    "    # Ira verificar se o usuário digitou numeros no campo de entrada.\n",
+    "    # O isnumeric tem como objetivo retornar um valor booleano que indica\n",
+    "    # se o dado possui ou não valores númericos\n",
+    "    if entrada.isnumeric() == True:\n",
+    "        \n",
+    "        # Basicamente, vamos verificar se há a presença de valores numéricos no valor.\n",
+    "        # Caso essa condição seja verdadeira, vamos encerrar o programa e imprimir\n",
+    "        # essa mensagem.\n",
+    "        print(\"Por favor não digite numeros\")\n",
+    "    \n",
+    "    else:\n",
+    "        \n",
+    "        # Caso a condição anterior (if) seja falsa, vamos iniciar mais uma estrutura condicional que irá \n",
+    "        # verificar se o usuário aplicou algum filtro no select\n",
+    "         \n",
+    "        if entrada != \"NOME\" and entrada != \"ARMA\" and entrada != \"ID\" and entrada != \"MOSTRAR TODOS OS DADOS\":\n",
+    "            \n",
+    "            # Ira verificar se a entrada do usuário é diferente das opções de filtro disponibilizadas pelo\n",
+    "            # sistema. Se essa condição for verdadeira, vamos encerrar o programa e mostrar essa mensagem.    \n",
+    "            print(\"Por favor, se quiser filtrar os dados digite apenas: NOME, ARMA, ID ou MOSTRAR TODOS OS PRODUTOS\")\n",
+    "        \n",
+    "        else:\n",
+    "            \n",
+    "            # Se o usuário digitar um valor válido, vamos verificar qual foi a opção escolhida.\n",
+    "            \n",
+    "             if entrada == \"NOME\":\n",
+    "                \n",
+    "                # Se o usuário escolher \"Nome\" vamos mostrar todos\n",
+    "                # os nomes presentes na base de dados.\n",
+    "                \n",
+    "                # Irá conter o comando que seleciona apenas os nomes\n",
+    "                # presentes na base de dados\n",
+    "                sql_query = f\"SELECT nome FROM {nome_tabela}\"\n",
+    "                \n",
+    "                # Irá executar o comando de select\n",
+    "                cursor.execute(sql_query)\n",
+    "                \n",
+    "                # Mensagem que irá aparecer após a execução bem sucedida do bloco\n",
+    "                print(\"Nomes encontrados na base de dados\")\n",
+    "            \n",
+    "             elif entrada == \"ARMA\":\n",
+    "                 \n",
+    "                # Se o usuário escolher \"ARMA\" vamos mostrar todos\n",
+    "                # as armas presentes na base de dados.\n",
+    "                \n",
+    "                # Irá conter o comando que seleciona apenas as armas\n",
+    "                # presentes na base de dados\n",
+    "                sql_query = f\"SELECT arma FROM {nome_tabela}\"\n",
+    "                \n",
+    "                # Mensagem que irá aparecer após a execução bem sucedida do bloco\n",
+    "                print(\"armas encontradas na base de dados\")\n",
+    "                                \n",
+    "                # Ira executar o comando de select\n",
+    "                cursor.execute(sql_query)\n",
+    "            \n",
+    "             elif entrada == \"ID\":\n",
+    "                 # Se o usuário escolher \"ID\" vamos mostrar todos\n",
+    "                 # os IDS presentes na base de dados.\n",
+    "                \n",
+    "                # Irá conter o comando que seleciona apenas os\n",
+    "                # ids presentes na base de dados\n",
+    "                 sql_query = f\"SELECT id FROM {nome_tabela}\"\n",
+    "                \n",
+    "                # Mensagem que irá aparecer após a execução bem sucedida do bloco\n",
+    "                 print(\"IDs encontrados na base de dados\")\n",
+    "                \n",
+    "                # Ira executar o comando de select\n",
+    "                 cursor.execute(sql_query)\n",
+    "            \n",
+    "             elif entrada == \"MOSTRAR TODOS OS DADOS\":\n",
+    "                 \n",
+    "                 # Se o usuário escolher \"MoSTRAR TODOS OS DADOS\" vamos mostrar todos\n",
+    "                 # os dados presentes na base de dados.\n",
+    "                 \n",
+    "                 # Mensagem que será impressa após a execução bem sucedida do bloco\n",
+    "                 print(\"Dados encontrados\")\n",
+    "                 \n",
+    "                 # Ira conter o comando que mostra todos os dados da base de dados\n",
+    "                 sql_query = f\"SELECT * FROM {nome_tabela}\"\n",
+    "                 \n",
+    "                 # Ira executar o comando select.\n",
+    "                 cursor.execute(sql_query)\n",
+    "        \n",
+    "        # Ira percorrer o cursor com o objetivo de imprimir na tela\n",
+    "        # os valores filtrados pelo select    \n",
+    "        for dado in cursor:\n",
+    "            \n",
+    "            print(dado)\n",
+    "\n",
+    "# Ira tratar o erro identificado usando a execeção especificada no except.\n",
+    "# Nesse caso, o erro mais provável é a não existência da tabela ou da coluna\n",
+    "# especificada (programmingerror) \n",
+    "except pymysql.ProgrammingError as erro:\n",
+    "    \n",
+    "    # Mensagem que irá indicar o erro.\n",
+    "    print(\"Não foi possivel selecionar os dados, por favor verifique se a tabela ou a coluna realmente existe: \", erro)\n",
+    "\n",
+    "except pymysql.OperationalError as erro:\n",
+    "    \n",
+    "    print(\"Falha na comunicação com o servidor: \", erro)\n",
+    "    \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "f81a2082",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dados Encontrados\n",
+      "('Rick', 'Machadinha', 3)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Irá inspecionar o bloco de código que utiliza o where para buscar dados\n",
+    "# utilizando o nome, a arma ou o id.\n",
+    "try:\n",
+    "    \n",
+    "    # Irá conter o nome da tabela que o usuário quer acessar para fazer\n",
+    "    # a pesquisa. \n",
+    "    nome_tabela = input(str(\"Digite o nome da tabela que você quer acessar\"))\n",
+    "\n",
+    "    # Ira conter o filtro que o usuário quer utilizar para fazer a pesquisa.\n",
+    "    # O upper irá converter todos os valores para MAIUSCULO, dessa maneira\n",
+    "    # ficará mais de validar as entradas do usuário.\n",
+    "    opcao = input(str(\"Escolha a forma como você quer realiazar a pesquisa no sistema: Nome, Arma, ID\")).upper()\n",
+    "\n",
+    "    # Vamos usar a função isnumeric para verificar se o usuário digitou numeros\n",
+    "    # na passagem de valores para o sistema \n",
+    "    if opcao.isnumeric() == True:\n",
+    "        \n",
+    "        # Se a condição for verdadeira, iremos imprimir essa mensagem.\n",
+    "        print(\"Por favor não digite numeros\")\n",
+    "\n",
+    "    else:\n",
+    "        \n",
+    "        # Se a condição anterior (if opcao.isnumeric == True) for falsa,\n",
+    "        # iremos iniciar as verificações que iram validar as escolhas do\n",
+    "        # usuário.\n",
+    "        \n",
+    "        if opcao == \"NOME\":\n",
+    "            \n",
+    "            # Se o usuário escolher a opção NOME, iremos pedir\n",
+    "            # para o usuário digitar o nome que ele quer procurar.       \n",
+    "             nome = input(str(\"Escreva o nome do integrante\"))\n",
+    "\n",
+    "            # Após a coleta do valor, vamos novamente verificar utilizando\n",
+    "            # o isnumeric se o usuário digitou numeros nos valores de entrada.\n",
+    "             if nome.isnumeric() == True:\n",
+    "                \n",
+    "                # Mensagem que será impresssa se a condição for verdadeira. \n",
+    "                print(\"Não há números nos nomes registrados no sistema\")\n",
+    "                \n",
+    "             else:\n",
+    "                \n",
+    "                # Caso o valor não contenha valores numéricos, vamos iniciar\n",
+    "                # o processo de select dos dados solicitados pelo usuário.\n",
+    "                \n",
+    "                # Ira conter o comando sql \n",
+    "                sql_query = f\"SELECT * FROM {nome_tabela} WHERE nome = '{nome}'\"\n",
+    "                \n",
+    "                # Ira executar o comando de select nos dados pesquisados pelo\n",
+    "                # usuário.\n",
+    "                cursor.execute(sql_query)\n",
+    "                \n",
+    "                # Mensagem que aparecerá após a execução bem sucedida do bloco  \n",
+    "                print(\"Dados Encontrados\")\n",
+    "                \n",
+    "        elif opcao == \"ARMA\":\n",
+    "            \n",
+    "            # Se o usuário escolher a opção ARMA, iremos pedir para\n",
+    "            # o usuário digitar o nome da arma que ele quer procurar \n",
+    "            arma = input(str(\"Escreva o nome da arma\"))\n",
+    "            \n",
+    "            # Após a coleta do valor, vamos verificar se a presenção de\n",
+    "            # numeros usando os isnumeric. \n",
+    "            if arma.isnumeric() == True:\n",
+    "                \n",
+    "                # Se a condição for verdadeira, vamos imprimir na tela\n",
+    "                # essa mensagem.\n",
+    "                print(\"O nome das armas não contém números\")\n",
+    "            \n",
+    "            else:\n",
+    "                \n",
+    "                # Se a condição anterior (if arma.isnumeric) for falsa, iremos\n",
+    "                # iniciar o processo de select dos dados solicitados pelo usuário.\n",
+    "                \n",
+    "                # Ira conter o comando de select\n",
+    "                sql_query = f\"SELECT * FROM {nome_tabela} WHERE arma = '{arma}'\"\n",
+    "                \n",
+    "                # Irá executar o comando de select\n",
+    "                cursor.execute(sql_query)\n",
+    "                \n",
+    "                # Irá imprimir a mensagem após a execução bem sucedida do bloco\n",
+    "                # de código.\n",
+    "                print(\"Dados Encontrados\")\n",
+    "        \n",
+    "        elif opcao == \"ID\":\n",
+    "            \n",
+    "            # Se o usuário escolher a opção ID, iremos pedir para o usuário\n",
+    "            # digitar o valor que ele está procurando.\n",
+    "            \n",
+    "            # Para evitar erros com a exceção valuerror, é necessário\n",
+    "            # receber o valor digitado como string com o objetivo de\n",
+    "            # converte-lo para int.\n",
+    "            \n",
+    "            # Descrição do problema: Basicamente,quando definimos o tipo do\n",
+    "            # input como int, ele considera o valor passado na opção (uma\n",
+    "            # string) como incorreto, dessa maneira ao escolher a opção id,\n",
+    "            # não conseguimos acessar o loop que irá selecionar os dados\n",
+    "            # pedidos pelo usuário, pois, o valuerror é automaticamente\n",
+    "            # acionado por conta da string da variável opcao.\n",
+    "            id_entrada = input((\"Escreva o id que você quer buscar\"))\n",
+    "            \n",
+    "            # Ira converter o valor para inteiro.\n",
+    "            id = int(id_entrada)\n",
+    "            \n",
+    "            # Ira conter o comando de select\n",
+    "            sql_query = f\"SELECT * FROM {nome_tabela} WHERE id = {id}\"\n",
+    "            \n",
+    "            # Irá executar o comando de select.\n",
+    "            cursor.execute(sql_query)\n",
+    "            \n",
+    "            print(\"Dados Encontrados\")\n",
+    "        \n",
+    "        else:\n",
+    "            \n",
+    "            # Se o usuário não escplher nenhuma das opções, iremos\n",
+    "            # apresentar essa mensagem.\n",
+    "            print(\"Por favor, digite apenas: NOME, ARMA ou ID\")\n",
+    "    \n",
+    "    # Irá percorrer o cursor e imprimir os dados solicitados.\n",
+    "    for dado in cursor:\n",
+    "        \n",
+    "        print(dado)\n",
+    "            \n",
+    "except pymysql.ProgrammingError as erro:\n",
+    "    \n",
+    "    # Irá tratar erros relacionados tabelas inexistentes.\n",
+    "    \n",
+    "    # Irá apresentar a mensagem de erro. \n",
+    "    print(\"A tabela especificada não foi encontrada: \", erro)\n",
+    "\n",
+    "except pymysql.OperationalError as erro:\n",
+    "    \n",
+    "    # Ira tratar erros relacionados a falha na conexão ou inexistência do\n",
+    "    # banco de dados\n",
+    "    print(\"Falha na comunicação com o servidor: \", erro)\n",
+    "\n",
+    "except ValueError as erro:\n",
+    "    \n",
+    "    # Ira tratar erros de tipagem relacionados ao campo de id (presença\n",
+    "    # de letras em valores numéricos)\n",
+    "    print(\"Por favor, não digite letras no ID: \", erro)"
    ]
   }
  ],
