Aula de select usando python e mysql
Coisas que fiz diferente da aula

-> Usei o input para coletar as entradas de usuários.

-> usei o upper para facilitar a validação de entrada do usuário

-> Usei o isnumeric para verificar a existência de números em dados categóricos

-> usei o try e o except para lidar com possiveis erros do trecho de código

-> Utilizei estruturas condicionais para construir toda a logica do bloco

--- a/BancoDeDados.ipynb
+++ b/BancoDeDados.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "8e6382e1",
    "metadata": {},
    "outputs": [],
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "ab935644",
    "metadata": {},
    "outputs": [
@@ -445,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 6,
    "id": "43db4390",
    "metadata": {},
    "outputs": [
@@ -589,7 +589,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 7,
    "id": "b6de8ec4",
    "metadata": {},
    "outputs": [
@@ -722,8 +722,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d2798114",
+   "metadata": {},
+   "source": [
+    "Select usando o WHERE do MySQL"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 8,
    "id": "f81a2082",
    "metadata": {},
    "outputs": [
@@ -873,7 +881,6 @@
     "    print(\"Falha na comunicação com o servidor: \", erro)\n",
     "\n",
     "except ValueError as erro:\n",
-    "    \n",
     "    # Ira tratar erros de tipagem relacionados ao campo de id (presença\n",
     "    # de letras em valores numéricos)\n",
     "    print(\"Por favor, não digite letras no ID: \", erro)"
