Aula de order by
Coisas que fiz diferente da aula:

-> Utilizei try e except para validar os possiveis erros do sistema

--- a/BancoDeDados.ipynb
+++ b/BancoDeDados.ipynb
@@ -885,6 +885,141 @@
     "    # de letras em valores numéricos)\n",
     "    print(\"Por favor, não digite letras no ID: \", erro)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4a5dde62",
+   "metadata": {},
+   "source": [
+    "Ordenando informaçoes usando o ORDER BY"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "52f15a77",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dados ordenados por nome\n",
+      "('ana', 'faca', 10)\n",
+      "('Carol', 'Metralhadora', 6)\n",
+      "('Daryl', 'Besta', 5)\n",
+      "('Gleen', 'Pistola', 4)\n",
+      "('Marcos', 'Arco e Flecha', 9)\n",
+      "('Rick', 'Machadinha', 3)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Irá inspecionar o bloco de código que irá realizar a ordenação.\n",
+    "try:\n",
+    "    \n",
+    "    # Ira conter o nome da tabela que será ordenada.\n",
+    "    nome_tabela = input((\"Por favor escreva o nome da tabela que você quer ordenar\"))\n",
+    "    \n",
+    "    # Ira conter a maneira que o usuário decidiu ordenar os dados. O upper\n",
+    "    # irá converter todos os dados para maiusculo. \n",
+    "    opcao = input(\"Escolha como você quer ordenar: nome, arma, id\").upper()\n",
+    "    \n",
+    "    # A estrutura condicional irá verificar a forma como o usuário\n",
+    "    # irá ordenar os dados. \n",
+    "    if opcao == \"NOME\":\n",
+    "        \n",
+    "        # Trecho que irá ordenar os dados por nome\n",
+    "        \n",
+    "        # Irá conter o comando sql que ordena os dados\n",
+    "        sql_query = f\"SELECT * FROM {nome_tabela} ORDER BY nome\"\n",
+    "        \n",
+    "        # Irá executar o comando sql\n",
+    "        cursor.execute(sql_query)\n",
+    "\n",
+    "        print(\"Dados ordenados por nome\")\n",
+    "        \n",
+    "    elif opcao == \"ARMA\":\n",
+    "        \n",
+    "        # Trecho que irá ordenar os dados por arma\n",
+    "        \n",
+    "        # Ira conter o comando que ordena os dados por arma\n",
+    "        sql_query = f\"SELECT * FROM {nome_tabela} ORDER By arma\"\n",
+    "\n",
+    "        # Ira executar o comando sql\n",
+    "        cursor.execute(sql_query)\n",
+    "        \n",
+    "        print(\"Dados ordenados por arma\")\n",
+    "        \n",
+    "    elif opcao == \"ID\":\n",
+    "        \n",
+    "        # Trecho que irá ordenar os dados por id\n",
+    "        \n",
+    "        # Irá conter o comando que ordena os dados por id\n",
+    "        sql_query = f\"SELECT * FROM {nome_tabela} ORDER BY id\"\n",
+    "        \n",
+    "        # Irá executar o comando que ordenará os dados\n",
+    "        cursor.execute(sql_query)\n",
+    "\n",
+    "        print(\"Dados ordenados por id\")\n",
+    "    else:\n",
+    "        \n",
+    "        # Caso não escolha nenhuma das opções válidas,\n",
+    "        # vamos imprimir essa mensagem.\n",
+    "        print(\"Por favor digite apenas: NOME, ARMA ou ID\")\n",
+    "    \n",
+    "    # For que ira percorrer o cursor e imprimir os dados\n",
+    "    # ordenados.\n",
+    "    for dado in cursor:\n",
+    "        \n",
+    "        print(dado)\n",
+    "\n",
+    "except pymysql.ProgrammingError as erro:\n",
+    "    \n",
+    "    # Ira tratar os dados usando a execeção especificada.\n",
+    "    # O programing error ira lidar com a ausencia de tabelas\n",
+    "    # nos dados.\n",
+    "    print(\"Tabela não encontrada: \", erro)\n",
+    "\n",
+    "except pymysql.OperationalError as erro:\n",
+    "    \n",
+    "    # Ira lidar com erros de comunicação do servidor, como por exemplo,\n",
+    "    # a falha na conexão com o banco de dados.\n",
+    "    print(\"Falha na comunicação com o servidor\")\n",
+    "    \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "db0e4ad0",
+   "metadata": {},
+   "source": [
+    "Atualizando dados"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "baa0cb7e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "try:\n",
+    "    \n",
+    "    nome_tabela = input(\"Escreva o nome da tabela que você quer atualizar\")\n",
+    "\n",
+    "    id_dado = input(\"Escreva o id da tabela que você quer atualizar\")\n",
+    "    \n",
+    "    id = int(id_dado)\n",
+    "    \n",
+    "    if id.isnumeric == True:\n",
+    "        \n",
+    "        opcao = input(\"Escolha o que você quer atualizar: NOME, ARMA, ID, TUDO\").upper()\n",
+    "        \n",
+    "        if opcao ==\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
